src/test/resources/typeSystemTestModels/valid/methods/MethodExceptionThrows.java
package typeSystemTestModels.valid.methods;

import java.io.IOException;
import java.lang.IndexOutOfBoundsException;

public class MethodExceptionThrows {

  public void test() throws IOException, IndexOutOfBoundsException {

  }
}
