src/test/resources/typeSystemTestModels/invalid/methods/MethodExceptionThrows.java
package typeSystemTestModels.invalid.methods;

import java.util.List;

public class MethodExceptionThrows{

  public void setName() throws java.io.IOException, List {

  }

}
